edited map removing the flowers since they stretch too much, fixed the hover on the buildings, everything should work now except the grass.

--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -373,8 +373,8 @@ input {
 }
 
 #main_pokedex_div {
-  width: 10%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
 }
 
 #main_pokedex_img {
